Fix button hover state by adding parent relative positiong context | stretch car body using flex so that all card are presented at equal heights

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,9 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700&family=Montserrat:wght@700&display=swap");
+@import "vars/mixins.scss";
 @import "vars/variables.scss";
 @import "vars/colors.scss";
 @import "vars/buttons.scss";
-@import "vars/mixins.scss";
 
+html,
+body {
+  height: 100%;
+}
 body {
   font-family: "Catamaran", sans-serif;
   font-size: 16px;
